--- a/lib/kaffy_web/templates/home/index.html.eex
+++ b/lib/kaffy_web/templates/home/index.html.eex
@@ -4,7 +4,7 @@
     <ul class="breadcrumb">
         <li class="breadcrumb-item active" aria-current="page">
         <span>
-            Overview <i class="fas fa-feather icon-sm text-primary align-middle"></i>
+            <%= Kaffy.Utils.gettext("Overview") %> <i class="fas fa-feather icon-sm text-primary align-middle"></i>
         </span>
         </li>
     </ul>
