--- a/lib/kaffy_web/templates/resource/new.html.eex
+++ b/lib/kaffy_web/templates/resource/new.html.eex
@@ -9,7 +9,7 @@
         <div class="card-header">
             <div class="row justify-content-between">
                 <div class="col-auto mr-auto">
-                    <h1 class="mt-4">New <%= Kaffy.ResourceAdmin.singular_name(@my_resource) %></h1>
+                    <h1 class="mt-4"><%= Kaffy.Utils.gettext("New %{resource}", resource: Kaffy.ResourceAdmin.singular_name(@my_resource)) %></h1>
                 </div>
             </div>
         </div>
@@ -21,10 +21,10 @@
                     <% end %>
                 <% end %>
                 <div class="form-group">
-                    <%= link "Back", to: Kaffy.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource), class: "btn btn-sm btn-light" %> &nbsp;
-                    <input type="submit" name="submit" value="Save" class="btn btn-sm btn-primary" />
-                    <input type="submit" name="submit" value="Save and add another" class="btn btn-sm btn-primary" />
-                    <input type="submit" name="submit" value="Save and continue editing" class="btn btn-sm btn-primary" />
+                    <%= link Kaffy.Utils.gettext("Back"), to: Kaffy.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource), class: "btn btn-sm btn-light" %> &nbsp;
+                    <input type="submit" name="submit" value="<%= Kaffy.Utils.gettext("Save") %>" class="btn btn-sm btn-primary" />
+                    <input type="submit" name="submit" value="<%= Kaffy.Utils.gettext("Save and add another") %>" class="btn btn-sm btn-primary" />
+                    <input type="submit" name="submit" value="<%= Kaffy.Utils.gettext("Save and continue editing") %>" class="btn btn-sm btn-primary" />
                 </div>
             </form>
 
