--- a/lib/kaffy_web/templates/resource/show.html.eex
+++ b/lib/kaffy_web/templates/resource/show.html.eex
@@ -44,9 +44,11 @@
                     <input type="submit" name="submit" value="<%= Kaffy.Utils.gettext("Save") %>" class="btn btn-sm btn-primary" />
                     <input type="submit" name="submit" value="<%= Kaffy.Utils.gettext("Save and add another") %>" class="btn btn-sm btn-primary"/>
                     <input type="submit" name="submit" value="<%= Kaffy.Utils.gettext("Save and continue editing") %>" class="btn btn-sm btn-primary" />
+                    <%= if Kaffy.ResourceAdmin.show_delete(@my_resource) do %>
                     <button type="button" class="btn btn-sm btn-danger float-right" data-toggle="modal" data-target="#delete-modal">
                         <i class="fas fa-trash"></i> <%= Kaffy.Utils.gettext("Delete") %>
                     </button>
+                    <% end %>
                 </div>
             </form>
         </div>
