--- a/lib/kaffy_web/templates/layout/app.html.eex
+++ b/lib/kaffy_web/templates/layout/app.html.eex
@@ -34,6 +34,40 @@
           <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
             <span class="fas fa-bars"></span>
           </button>
+
+          <div class="navbar-nav flex-fill justify-content-end">
+            <%= for {id, options} <- Kaffy.Utils.session_filters(@conn) do %>
+              <div class="nav-item">
+                <div class="search-field">
+                  <select class="custom-select" name="<%= id %>" id="<%= id %>">
+                    <%= for {value, label} <- options do %>
+                      <option value="<%= value %>"
+                        <%= if @conn.assigns[id] == value do %>
+                          selected <% end %>
+                      ><%= label %></option>
+                    <% end %>
+                  </select>
+                </div>
+              </div>
+            <% end %>
+            <div class="nav-item nav-profile dropdown">
+              <div class="nav-link dropdown-toggle" data-toggle="dropdown">
+                <span class="nav-profile-img">
+                  <img src="<%= Kaffy.Utils.face_1(@conn) %>" alt="avatar" />
+                </span>
+                <span class="nav-profile-text">
+                  <%= @conn.assigns[:sys_user].name %>
+                </span>
+              </div>
+
+              <div class="dropdown-menu navbar-dropdown">
+                <div class="dropdown-item">
+                  <a href="/logout"><%= Kaffy.Utils.gettext("Log out") %></a>
+                </div>
+              </div>
+
+            </div>
+          </div>
         </div>
       </nav>
 
