--- a/lib/kaffy_web/templates/resource/index.html.eex
+++ b/lib/kaffy_web/templates/resource/index.html.eex
@@ -13,13 +13,15 @@
           <div class="col-auto">
             <input id="kaffy-search-field" type="text" name="search" value="<%= Map.get(@params, "search", "") %>" class="form-control" placeholder="<%= Kaffy.Utils.gettext("Search %{resource}", resource: Kaffy.ResourceAdmin.singular_name(@my_resource)) %>...">
           </div>
-        <% end  %>
-        <div class="col-auto">
-          <%= link to: Kaffy.Utils.router().kaffy_resource_path(@conn, :new, @context, @resource), class: "btn btn-outline-primary" do %>
-            <i class="fas fa-plus"></i>
-            <%= Kaffy.Utils.gettext("New %{resource}", resource: Kaffy.ResourceAdmin.singular_name(@my_resource)) %>
-          <% end %>
-        </div>
+        <% end %>
+        <%= if Kaffy.ResourceAdmin.show_create(@my_resource) do %>
+          <div class="col-auto">
+            <%= link to: Kaffy.Utils.router().kaffy_resource_path(@conn, :new, @context, @resource), class: "btn btn-outline-primary" do %>
+              <i class="fas fa-plus"></i>
+              <%= Kaffy.Utils.gettext("New %{resource}", resource: Kaffy.ResourceAdmin.singular_name(@my_resource)) %>
+            <% end %>
+          </div>
+        <% end %>
       </div>
     </div>
 
@@ -30,7 +32,7 @@
             <div class="col-auto">
                 <div class="btn-group">
                   <button type="button" class="btn dropdown-toggle btn-sm btn-secondary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-wrench"></i> <span class="d-none d-md-inline">Actions</span>
+                    <i class="fas fa-wrench"></i> <span class="d-none d-md-inline"><%= Kaffy.Utils.gettext("Actions") %></span>
                   </button>
                   <div class="dropdown-menu">
                     <%= for {action_key, options} <- list_actions do %>
@@ -116,8 +118,8 @@
                     <% end %>
                   </div>
                   <div class="modal-footer">
-                      <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
-                      <button type="submit" class="btn btn-primary kaffy-list-action-submit" id="<%= action_key %>_submit">Continue</button>
+                      <button type="button" class="btn btn-light" data-dismiss="modal"><%= Kaffy.Utils.gettext("Cancel") %></button>
+                      <button type="submit" class="btn btn-primary kaffy-list-action-submit" id="<%= action_key %>_submit"><%= Kaffy.Utils.gettext("Continue") %></button>
                   </div>
               </div>
           </div>
