--- a/lib/kaffy_web/templates/layout/app.html.eex
+++ b/lib/kaffy_web/templates/layout/app.html.eex
@@ -109,7 +109,7 @@
             <%= if !Enum.empty?(custom_pages) do %>
               <li class="nav-item">
                 <a class="nav-link collapsed" href="#kaffy-pages" data-toggle="collapse" aria-expanded="false" aria-controls="kaffy-pages">
-                    <span class="menu-title">Pages</span>
+                    <span class="menu-title"><%= Kaffy.Utils.gettext("Pages") %></span>
                     <i class="menu-arrow"></i>
                     <i class="fas fa-bars menu-icon"></i>
                 </a>
