--- a/priv/static/assets/scss/_variables.scss
+++ b/priv/static/assets/scss/_variables.scss
@@ -330,7 +330,7 @@ $sidebar-width-lg: 16.25rem;
 $sidebar-width-mini: 11.5625rem;
 $sidebar-width-icon: 4.375rem;
 
-$sidebar-light-bg: $blue;
+$sidebar-light-bg: rgba(0, 0, 0, 0.85);
 $sidebar-light-menu-color: #c0cbee;
 $sidebar-light-submenu-color: #afbeeb;
 $sidebar-light-menu-active-bg: #2653d4;
