--- a/lib/kaffy_web/templates/layout/app.html.eex
+++ b/lib/kaffy_web/templates/layout/app.html.eex
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title><%= Kaffy.Utils.title() %> - Kaffy</title>
+    <title><%= Kaffy2.Utils.title() %> - Kaffy2</title>
     <link rel="stylesheet" href="/kaffy/assets/vendors/fontawesome/css/all.css">
     <link rel="stylesheet" href="/kaffy/assets/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="/kaffy/assets/scss/style.css">
     <link rel="stylesheet" href="/kaffy/assets/vendors/flatpickr/flatpickr.min.css">
     <link rel="stylesheet" href="/kaffy/assets/css/kaffy.css">
     <link rel="shortcut icon" href="/kaffy/assets/images/favicon/favicon-32x32.png" />
-    <%= for css <- Kaffy.Utils.extensions(@conn).stylesheets do %>
+    <%= for css <- Kaffy2.Utils.extensions(@conn).stylesheets do %>
       <%= css %>
     <% end %>
     <script src="/kaffy/assets/vendors/js/vendor.bundle.base.js"></script>
@@ -19,11 +19,11 @@
     <div class="container-scroller">
       <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-          <%= link to: Kaffy.Utils.router().kaffy_home_path(@conn, :index), class: "navbar-brand brand-logo" do %>
-            <img src="<%= Kaffy.Utils.logo(@conn) %>" alt="logo" />
+          <%= link to: Kaffy2.Utils.router().kaffy_home_path(@conn, :index), class: "navbar-brand brand-logo" do %>
+            <img src="<%= Kaffy2.Utils.logo(@conn) %>" alt="logo" />
           <% end %>
-          <%= link to: Kaffy.Utils.router().kaffy_home_path(@conn, :index), class: "navbar-brand brand-logo-mini" do %>
-            <img src="<%= Kaffy.Utils.logo_mini(@conn) %>"  alt="logo" />
+          <%= link to: Kaffy2.Utils.router().kaffy_home_path(@conn, :index), class: "navbar-brand brand-logo-mini" do %>
+            <img src="<%= Kaffy2.Utils.logo_mini(@conn) %>"  alt="logo" />
           <% end %>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
@@ -36,7 +36,7 @@
           </button>
 
           <div class="navbar-nav flex-fill justify-content-end">
-            <%= for {id, options} <- Kaffy.Utils.session_filters(@conn) do %>
+            <%= for {id, options} <- Kaffy2.Utils.session_filters(@conn) do %>
               <div class="nav-item">
                 <div class="search-field">
                   <select class="custom-select" name="<%= id %>" id="<%= id %>">
@@ -53,7 +53,7 @@
             <div class="nav-item nav-profile dropdown">
               <div class="nav-link dropdown-toggle" data-toggle="dropdown">
                 <span class="nav-profile-img">
-                  <img src="<%= Kaffy.Utils.face_1(@conn) %>" alt="avatar" />
+                  <img src="<%= Kaffy2.Utils.face_1(@conn) %>" alt="avatar" />
                 </span>
                 <span class="nav-profile-text">
                   <%= @conn.assigns[:user].name %>
@@ -62,7 +62,7 @@
 
               <div class="dropdown-menu navbar-dropdown">
                 <div class="dropdown-item">
-                  <a href="/logout"><%= Kaffy.Utils.gettext("Log out") %></a>
+                  <a href="/logout"><%= Kaffy2.Utils.gettext("Log out") %></a>
                 </div>
               </div>
 
@@ -75,16 +75,16 @@
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
           <ul class="nav">
 
-            <%= if Kaffy.Utils.show_dashboard?() do %>
+            <%= if Kaffy2.Utils.show_dashboard?() do %>
               <li class="nav-item<%= if @conn.assigns[:context] == nil do %> active<% end %>">
-                <%= link to: Kaffy.Utils.router().kaffy_dashboard_path(@conn, :dashboard), class: "nav-link" do %>
+                <%= link to: Kaffy2.Utils.router().kaffy_dashboard_path(@conn, :dashboard), class: "nav-link" do %>
                   <i class="fas fa-home menu-icon"></i>
-                  <span class="menu-title"><%= Kaffy.Utils.gettext("Dashboard") %></span>
+                  <span class="menu-title"><%= Kaffy2.Utils.gettext("Dashboard") %></span>
                 <% end %>
               </li>
             <% end %>
 
-            <%= for custom_link <- Kaffy.ResourceAdmin.collect_links(@conn, :top) do %>
+            <%= for custom_link <- Kaffy2.ResourceAdmin.collect_links(@conn, :top) do %>
               <li class="nav-item">
                 <%= link to: custom_link.url, method: custom_link.method, class: "nav-link", target: custom_link.target do %>
                   <i class="fas fa-<%= custom_link.icon %> menu-icon"></i>
@@ -93,39 +93,39 @@
               </li>
             <% end %>
 
-            <% custom_pages = Kaffy.ResourceAdmin.collect_pages(@conn) %>
+            <% custom_pages = Kaffy2.ResourceAdmin.collect_pages(@conn) %>
 
             <%= if !Enum.empty?(custom_pages) do %>
               <li class="nav-item">
                 <a class="nav-link collapsed" href="#kaffy-pages" data-toggle="collapse" aria-expanded="false" aria-controls="kaffy-pages">
                     <i class="fas fa-atom menu-icon"></i>
-                    <span class="menu-title"><%= Kaffy.Utils.gettext("Pages") %></span>
+                    <span class="menu-title"><%= Kaffy2.Utils.gettext("Pages") %></span>
                     <i class="menu-arrow"></i>
                 </a>
                 <div class="collapse" id="kaffy-pages">
                   <ul class="nav flex-column sub-menu">
                     <%= for custom_page <- custom_pages do %>
-                      <li class="nav-item"><%= link custom_page.name, to: Kaffy.Utils.router().kaffy_page_path(@conn, :index, custom_page.slug), class: "nav-link" %></li>
+                      <li class="nav-item"><%= link custom_page.name, to: Kaffy2.Utils.router().kaffy_page_path(@conn, :index, custom_page.slug), class: "nav-link" %></li>
                     <% end %>
                   </ul>
                 </div>
               </li>
             <% end %>
 
-            <%= for context <- Kaffy.Utils.contexts(@conn) do %>
+            <%= for context <- Kaffy2.Utils.contexts(@conn) do %>
                 <li class="nav-item<%= if @conn.assigns[:context] == to_string(context) do %> active<% end %>">
                     <a class="nav-link <%= if @conn.assigns[:context] != to_string(context) do %> collapsed<% end %>"
                        href="#<%= context %>-context" data-toggle="collapse" aria-expanded="false" aria-controls="<%= context %>-context">
                         <i class="fas fa-bars menu-icon"></i>
-                        <span class="menu-title"><%= Kaffy.Utils.context_name(@conn, context) %></span>
+                        <span class="menu-title"><%= Kaffy2.Utils.context_name(@conn, context) %></span>
                         <i class="menu-arrow"></i>
                     </a>
                     <div class="collapse<%= if @conn.assigns[:context] == to_string(context) do %> show<% end %>" id="<%= context %>-context">
                       <ul class="nav flex-column sub-menu">
-                        <%= for {resource, options} <- Kaffy.Utils.schemas_for_context(@conn, context) do %>
-                            <%= if Kaffy.ResourceAdmin.authorized?(options, @conn) do %>
-                                <li class="nav-item"><%= link Kaffy.ResourceAdmin.plural_name(options), to: Kaffy.Utils.router().kaffy_resource_path(@conn, :index, context, resource), class: "nav-link" %></li>
-                                <%= for custom_link <- Kaffy.ResourceAdmin.custom_links(options, :sub) do %>
+                        <%= for {resource, options} <- Kaffy2.Utils.schemas_for_context(@conn, context) do %>
+                            <%= if Kaffy2.ResourceAdmin.authorized?(options, @conn) do %>
+                                <li class="nav-item"><%= link Kaffy2.ResourceAdmin.plural_name(options), to: Kaffy2.Utils.router().kaffy_resource_path(@conn, :index, context, resource), class: "nav-link" %></li>
+                                <%= for custom_link <- Kaffy2.ResourceAdmin.custom_links(options, :sub) do %>
                                     <li class="nav-item"><%= link custom_link.name, to: custom_link.url, class: "nav-link", target: custom_link.target %></li>
                                 <% end %>
                             <% end %>
@@ -160,7 +160,7 @@
                 </div>
             <% end %>
 
-            <%= if Kaffy.Utils.phoenix_version?("1.4.") do %>
+            <%= if Kaffy2.Utils.phoenix_version?("1.4.") do %>
               <%= render(@view_module, @view_template, assigns) %>
             <% else %>
               <%= @inner_content %>
@@ -169,7 +169,7 @@
 
           <footer class="footer">
             <div class="d-sm-flex justify-content-center justify-content-sm-between">
-              <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2020 Kaffy. All rights reserved.</span>
+              <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2020 Kaffy2. All rights reserved.</span>
             </div>
           </footer>
 
@@ -186,7 +186,7 @@
     <script src="/kaffy/assets/js/select-all-checkbox.js?v=20"></script>
     <script src="/kaffy/assets/js/phoenix_html.js"></script>
     <script src="/kaffy/assets/js/dashboard.js?v=20"></script>
-    <%= for js <- Kaffy.Utils.extensions(@conn).javascripts do %>
+    <%= for js <- Kaffy2.Utils.extensions(@conn).javascripts do %>
       <%= js %>
     <% end %>
   </body>
