--- a/lib/kaffy_web/templates/resource/index.html.eex
+++ b/lib/kaffy_web/templates/resource/index.html.eex
@@ -4,21 +4,21 @@
       <div class="row justify-content-between">
         <div class="col-auto mr-auto">
           <h3>
-            <%= Kaffy.ResourceAdmin.plural_name(@my_resource) %><br/>
-            <span class="badge badge-secondary">(<%= Kaffy.Utils.gettext("~ %{filtered_count} records", filtered_count: @filtered_count) %>)</span>
+            <%= Kaffy2.ResourceAdmin.plural_name(@my_resource) %><br/>
+            <span class="badge badge-secondary">(<%= Kaffy2.Utils.gettext("~ %{filtered_count} records", filtered_count: @filtered_count) %>)</span>
             <div id="checkbox-selected-count" class="checkbox-selected-count float-right"></div>
           </h3>
         </div>
-        <%= if Enum.count(Kaffy.ResourceAdmin.search_fields(@my_resource)) > 0 do  %>
+        <%= if Enum.count(Kaffy2.ResourceAdmin.search_fields(@my_resource)) > 0 do  %>
           <div class="col-auto">
-            <input id="kaffy-search-field" type="text" name="search" value="<%= Map.get(@params, "search", "") %>" class="form-control" placeholder="<%= Kaffy.Utils.gettext("Search %{resource}", resource: Kaffy.ResourceAdmin.singular_name(@my_resource)) %>...">
+            <input id="kaffy-search-field" type="text" name="search" value="<%= Map.get(@params, "search", "") %>" class="form-control" placeholder="<%= Kaffy2.Utils.gettext("Search %{resource}", resource: Kaffy2.ResourceAdmin.singular_name(@my_resource)) %>...">
           </div>
         <% end %>
-        <%= if Kaffy.ResourceAdmin.show_create(@my_resource) do %>
+        <%= if Kaffy2.ResourceAdmin.show_create(@my_resource) do %>
           <div class="col-auto">
-            <%= link to: Kaffy.Utils.router().kaffy_resource_path(@conn, :new, @context, @resource), class: "btn btn-outline-primary" do %>
+            <%= link to: Kaffy2.Utils.router().kaffy_resource_path(@conn, :new, @context, @resource), class: "btn btn-outline-primary" do %>
               <i class="fas fa-plus"></i>
-              <%= Kaffy.Utils.gettext("New %{resource}", resource: Kaffy.ResourceAdmin.singular_name(@my_resource)) %>
+              <%= Kaffy2.Utils.gettext("New %{resource}", resource: Kaffy2.ResourceAdmin.singular_name(@my_resource)) %>
             <% end %>
           </div>
         <% end %>
@@ -26,13 +26,13 @@
     </div>
 
     <div class="card-body table-responsive w-100">
-      <%= if list_actions = Kaffy.ResourceAdmin.list_actions(@my_resource, @conn) do %>
+      <%= if list_actions = Kaffy2.ResourceAdmin.list_actions(@my_resource, @conn) do %>
         <div class="card-description">
           <div class="row">
             <div class="col-auto">
                 <div class="btn-group">
                   <button type="button" class="btn dropdown-toggle btn-sm btn-secondary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-wrench"></i> <span class="d-none d-md-inline"><%= Kaffy.Utils.gettext("Actions") %></span>
+                    <i class="fas fa-wrench"></i> <span class="d-none d-md-inline"><%= Kaffy2.Utils.gettext("Actions") %></span>
                   </button>
                   <div class="dropdown-menu">
                     <%= for {action_key, options} <- list_actions do %>
@@ -42,7 +42,7 @@
                             <%= options.name %>
                           </button>
                         <% else %>
-                          <%= form_tag(Kaffy.Utils.router().kaffy_resource_path(@conn, :list_action, @context, @resource, to_string(action_key)), method: :post, class: "list-action", id: "#{action_key}_form") %>
+                          <%= form_tag(Kaffy2.Utils.router().kaffy_resource_path(@conn, :list_action, @context, @resource, to_string(action_key)), method: :post, class: "list-action", id: "#{action_key}_form") %>
                             <input type="submit" name="submit" value="<%= options.name %>" class="dropdown-item kaffy-list-action-submit" id="<%= action_key %>_submit" />
                           </form>
                         <% end %>
@@ -61,15 +61,15 @@
       <nav aria-label="index-list-navigation">
         <ul class="pagination">
           <li class="page-item <%= @prev_class %>">
-            <%= link Kaffy.Utils.gettext("« Previous"), to: Kaffy.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource, Keyword.merge(params, page: @page - 1)), class: "page-link" %>
+            <%= link Kaffy2.Utils.gettext("« Previous"), to: Kaffy2.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource, Keyword.merge(params, page: @page - 1)), class: "page-link" %>
           </li>
           <%= for page_elem <- @list_pages do %>
             <li class="page-item <%= if page_elem == @page do %>active<% end %>  <%= if page_elem == "..." do %>disabled<% end %>">
-              <%= link page_elem, to: Kaffy.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource, Keyword.merge(params, page: page_elem)), class: "page-link" %>
+              <%= link page_elem, to: Kaffy2.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource, Keyword.merge(params, page: page_elem)), class: "page-link" %>
             </li>
           <% end %>
           <li class="page-item <%= @next_class %>">
-            <%= link Kaffy.Utils.gettext("Next »"), to: Kaffy.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource, Keyword.merge(params, page: @page + 1)), class: "page-link" %>
+            <%= link Kaffy2.Utils.gettext("Next »"), to: Kaffy2.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource, Keyword.merge(params, page: @page + 1)), class: "page-link" %>
           </li>
         </ul>
       </nav>
@@ -78,15 +78,15 @@
 </div>
 
 <form id="kaffy-filters-form" method="get" style="display:none;">
-  <%= if Kaffy.ResourceSchema.has_field_filters?(@my_resource) do %>
+  <%= if Kaffy2.ResourceSchema.has_field_filters?(@my_resource) do %>
     <%= for field <- @fields do %>
-        <% {field, filters} = Kaffy.ResourceSchema.kaffy_field_filters(@my_resource[:schema], field) %>
+        <% {field, filters} = Kaffy2.ResourceSchema.kaffy_field_filters(@my_resource[:schema], field) %>
         <%= if filters do %>
             <input id="custom-filter-<%= field %>" type="hidden" name="<%= field %>" value="<%= Map.get(@params, to_string(field), "") %>" />
         <% end %>
     <% end %>
   <% end %>
-  <% [{order_way, order_field}] = Kaffy.ResourceQuery.get_ordering(@my_resource, @params) %>
+  <% [{order_way, order_field}] = Kaffy2.ResourceQuery.get_ordering(@my_resource, @params) %>
   <input id="kaffy-filter-search" type="hidden" name="search" value="<%= Map.get(@params, "search", "") %>" />
   <input id="kaffy-filter-page" type="hidden" name="page" value="<%= Map.get(@params, "page", "1") %>" />
   <input id="kaffy-filter-limit" type="hidden" name="limit" value="<%= Map.get(@params, "limit", "100") %>" />
@@ -95,11 +95,11 @@
 </form>
 
 
-<% list_actions = Kaffy.ResourceAdmin.list_actions(@my_resource, @conn) || [] %>
+<% list_actions = Kaffy2.ResourceAdmin.list_actions(@my_resource, @conn) || [] %>
 <%= for {action_key, options} <- list_actions do %>
   <% extra_inputs = Map.get(options, :inputs, []) %>
   <%= if !Enum.empty?(extra_inputs) do %>
-    <%= form_tag(Kaffy.Utils.router().kaffy_resource_path(@conn, :list_action, @context, @resource, to_string(action_key)), method: :post, class: "list-action", id: "#{action_key}_form") %>
+    <%= form_tag(Kaffy2.Utils.router().kaffy_resource_path(@conn, :list_action, @context, @resource, to_string(action_key)), method: :post, class: "list-action", id: "#{action_key}_form") %>
       <div class="modal fade" id="<%= action_key %>_modal" tabindex="-1" role="dialog" aria-labelledby="<%= action_key %>_modal_label" aria-hidden="true">
           <div class="modal-dialog" role="document">
               <div class="modal-content">
@@ -118,8 +118,8 @@
                     <% end %>
                   </div>
                   <div class="modal-footer">
-                      <button type="button" class="btn btn-light" data-dismiss="modal"><%= Kaffy.Utils.gettext("Cancel") %></button>
-                      <button type="submit" class="btn btn-primary kaffy-list-action-submit" id="<%= action_key %>_submit"><%= Kaffy.Utils.gettext("Continue") %></button>
+                      <button type="button" class="btn btn-light" data-dismiss="modal"><%= Kaffy2.Utils.gettext("Cancel") %></button>
+                      <button type="submit" class="btn btn-primary kaffy-list-action-submit" id="<%= action_key %>_submit"><%= Kaffy2.Utils.gettext("Continue") %></button>
                   </div>
               </div>
           </div>
