--- a/lib/kaffy_web/templates/resource/new.html.eex
+++ b/lib/kaffy_web/templates/resource/new.html.eex
@@ -1,30 +1,30 @@
 
-<%= for error <- Kaffy.ResourceError.display_errors(@conn, @changeset) do %>
+<%= for error <- Kaffy2.ResourceError.display_errors(@conn, @changeset) do %>
 <div><%= error %></div>
 <% end %>
 
 
 <div class="mt-3 grid-margin stretch-card">
-    <div class="card shadow <%= Kaffy.ResourceError.form_error_border_class(@changeset, "border-left-primary")%>">
+    <div class="card shadow <%= Kaffy2.ResourceError.form_error_border_class(@changeset, "border-left-primary")%>">
         <div class="card-header">
             <div class="row justify-content-between">
                 <div class="col-auto mr-auto">
-                    <h1 class="mt-4"><%= Kaffy.Utils.gettext("New %{resource}", resource: Kaffy.ResourceAdmin.singular_name(@my_resource)) %></h1>
+                    <h1 class="mt-4"><%= Kaffy2.Utils.gettext("New %{resource}", resource: Kaffy2.ResourceAdmin.singular_name(@my_resource)) %></h1>
                 </div>
             </div>
         </div>
         <div class="card-body">
-            <%= f = form_for(@changeset, Kaffy.Utils.router().kaffy_resource_path(@conn, :create, @context, @resource), method: :post, multipart: true) %>
-                <%= for {field, options} <- Kaffy.ResourceAdmin.form_fields(@my_resource, @conn) do %>
+            <%= f = form_for(@changeset, Kaffy2.Utils.router().kaffy_resource_path(@conn, :create, @context, @resource), method: :post, multipart: true) %>
+                <%= for {field, options} <- Kaffy2.ResourceAdmin.form_fields(@my_resource, @conn) do %>
                     <%= if options.create != :hidden do %>
-                        <%= Kaffy.ResourceForm.kaffy_input @conn, @changeset, f, field, options %>
+                        <%= Kaffy2.ResourceForm.kaffy_input @conn, @changeset, f, field, options %>
                     <% end %>
                 <% end %>
                 <div class="form-group">
-                    <%= link Kaffy.Utils.gettext("Back"), to: Kaffy.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource), class: "btn btn-sm btn-light" %> &nbsp;
-                    <input type="submit" name="submit" value="<%= Kaffy.Utils.gettext("Save") %>" class="btn btn-sm btn-primary" />
-                    <input type="submit" name="submit" value="<%= Kaffy.Utils.gettext("Save and add another") %>" class="btn btn-sm btn-primary" />
-                    <input type="submit" name="submit" value="<%= Kaffy.Utils.gettext("Save and continue editing") %>" class="btn btn-sm btn-primary" />
+                    <%= link Kaffy2.Utils.gettext("Back"), to: Kaffy2.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource), class: "btn btn-sm btn-light" %> &nbsp;
+                    <input type="submit" name="submit" value="<%= Kaffy2.Utils.gettext("Save") %>" class="btn btn-sm btn-primary" />
+                    <input type="submit" name="submit" value="<%= Kaffy2.Utils.gettext("Save and add another") %>" class="btn btn-sm btn-primary" />
+                    <input type="submit" name="submit" value="<%= Kaffy2.Utils.gettext("Save and continue editing") %>" class="btn btn-sm btn-primary" />
                 </div>
             </form>
 
