--- a/lib/kaffy_web/templates/resource/pick_resource.html.eex
+++ b/lib/kaffy_web/templates/resource/pick_resource.html.eex
@@ -5,11 +5,11 @@
 <div class="col-lg-12 grid-margin stretch-card">
   <div class="card shadow mb-4">
     <div class="card-body table-responsive w-100">
-      <h4><%= Kaffy.ResourceAdmin.plural_name(@my_resource) %> <small>(~ <%= @filtered_count %> records)</small></h4>
+      <h4><%= Kaffy2.ResourceAdmin.plural_name(@my_resource) %> <small>(~ <%= @filtered_count %> records)</small></h4>
       <div class="card-description">
         <div class="row">
           <div class="col-md-12">
-            <input id="kaffy-search-field" type="text" name="search" value="<%= Map.get(@params, "search", "") %>" class="form-control bg-transparent" placeholder="Search <%= Kaffy.ResourceAdmin.plural_name(@my_resource) %>...">
+            <input id="kaffy-search-field" type="text" name="search" value="<%= Map.get(@params, "search", "") %>" class="form-control bg-transparent" placeholder="Search <%= Kaffy2.ResourceAdmin.plural_name(@my_resource) %>...">
           </div>
         </div>
       </div>
@@ -19,16 +19,16 @@
 
     <div class="btn-group" role="group" aria-label="Basic example">
       <% params = Map.to_list(@params) |> Enum.map(fn {k, v} -> {String.to_existing_atom(k), v} end) %>
-      <%= link "Previous", to: Kaffy.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource, Keyword.merge(params, page: @page - 1)), class: "btn btn-outline-primary#{@prev_class}" %>
-      <%= link "Next", to: Kaffy.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource, Keyword.merge(params, page: @page + 1)), class: "btn btn-outline-primary#{@next_class}" %>
+      <%= link "Previous", to: Kaffy2.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource, Keyword.merge(params, page: @page - 1)), class: "btn btn-outline-primary#{@prev_class}" %>
+      <%= link "Next", to: Kaffy2.Utils.router().kaffy_resource_path(@conn, :index, @context, @resource, Keyword.merge(params, page: @page + 1)), class: "btn btn-outline-primary#{@next_class}" %>
     </div>
   </div>
 </div>
 
 <form id="kaffy-filters-form" method="get" style="display:none;">
-  <%= if Kaffy.ResourceSchema.has_field_filters?(@my_resource) do %>
+  <%= if Kaffy2.ResourceSchema.has_field_filters?(@my_resource) do %>
     <%= for field <- @fields do %>
-        <% {field, filters} = Kaffy.ResourceSchema.kaffy_field_filters(@my_resource[:schema], field) %>
+        <% {field, filters} = Kaffy2.ResourceSchema.kaffy_field_filters(@my_resource[:schema], field) %>
         <%= if filters do %>
             <input id="custom-filter-<%= field %>" type="hidden" name="<%= field %>" value="<%= Map.get(@params, to_string(field), "") %>" />
         <% end %>
