--- a/lib/kaffy_web/templates/resource/pick_resource.html.eex
+++ b/lib/kaffy_web/templates/resource/pick_resource.html.eex
@@ -14,7 +14,7 @@
         </div>
       </div>
 
-      <%= render KaffyWeb.ResourceView, "_table.html", conn: @conn, fields: @fields, context: @context, resource: @resource, my_resource: @my_resource, entries: @entries, params: @params %>
+      <%= render KaffyWeb2.ResourceView, "_table.html", conn: @conn, fields: @fields, context: @context, resource: @resource, my_resource: @my_resource, entries: @entries, params: @params %>
     </div>
 
     <div class="btn-group" role="group" aria-label="Basic example">
